# spotify-playlists-extractor

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  playlists_example.json  pyproject.toml  requirements.txt
docs/: Makefile  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  modules.rst  spotify_playlists_extractor.rst  troubleshooting.rst  usage.rst
example_output/: clean_playlists.example.json
notebooks/: playground.ipynb
src/spotify_playlists_extractor/: __init__.py  auth.py  core.py  playlist_extraction.py  playlist_metadata_cleaning.py  settings.py  utils.py
