[tool.poetry]
name = "spotify_playlists_extractor"
version = "0.1.0"
description = "A python playground."
authors = ["Harry Durnberger <100152207+harryd337@users.noreply.github.com>"]
packages = [
    { include = "spotify_playlists_extractor", from = "src" },
]
readme = "README.md"

[tool.poetry.scripts]
spotify_playlists_extractor = "spotify_playlists_extractor.core:main"

[tool.poetry.dependencies]
python = "~3.10"
toml = "^0.10.2"
jupyter = "^1.1.1"
pydantic-settings = "^2.9.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
python = "~3.10"
pre-commit = "^4.1.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true


[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
# Add list of modules to ignore
module = []
ignore_missing_imports = true


[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "D",  # pydocstyle
    "I",  # isort
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]

# Ruff docs recommend against using these alongside the Ruff formatter (cause conflicts)
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pylint.MASTER]
extension-pkg-whitelist="pydantic"
# pylint note: use pylint-django for Django projects

[tool.pylint.FORMAT]
max-line-length = "88"
output-format="colorized"
score="no"

[tool.pylint.REPORTS]
output-format="colorized"
score="no"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  "C0116",
  "C0114",
  "C0115",
  "C0103",
  "R0801",
  "R0903",
  "R0912",
  "R0913",
  "R1702",
  "W0718",
]
